--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
